# user-config-service

./: Cargo.toml  notes-user-config.txt
migrations/2021-03-04-201450_create_favourite_streams/: down.sql  up.sql
migrations/2021-03-19-202210_stream_management/: down.sql  up.sql
src/: authenticate.rs  favourite_streams.rs  main.rs  schema.rs  service.rs  stream_management.rs
src/database/: favourite_streams.rs  mod.rs  stream_management.rs
