[package]
name = "user-config-service"
version = "0.1.0"
authors = ["BeemStream <beemstreamofficial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["secrets"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["json", "diesel_postgres_pool"] }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" , branch = "master"}
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }
async-trait = "0.1.31"
futures = { version = "0.3.7", features = ["thread-pool"] }
log = "0.4.0"
env_logger = "0.8.2"
isahc = { git = "https://github.com/sagebind/isahc.git", features = ["psl", "json"]}
openssl = "*"
openssl-probe = "0.1.2"
